--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,9 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#676565</color>
+    <color name="white">#FFFFFF</color>
     <color name="backGROUND">#E36565</color>
     <color name="color1">#74EFE5</color>
+    <color name="blue_white">#669EAC</color>
 </resources>
